dev.finances finalizado

--- a/style.css
+++ b/style.css
@@ -221,6 +221,8 @@ td.expense{
 
     opacity: 0;
     visibility: hidden;
+
+    z-index: 999;
 }
 .modal-overlay.active{
     opacity: 1;
@@ -230,6 +232,9 @@ td.expense{
 .modal{
     background-color: #F0F2F5;
     padding: 2.4rem;
+
+    position: relative;
+    z-index: 1;
 }
 
 /*Form ===================================*/
